<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:background="@drawable/iplback"
    android:orientation="vertical"
    tools:context=".Feedback">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="40dp"
            >


            <EditText
                android:id="@+id/edit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/enter_your_email"
                android:textColorHint="#fff"
                android:textColor="#fff"
                android:background="@drawable/buttonshape"

                android:autofillHints=""
                android:inputType="textEmailAddress" />
            <EditText
                android:id="@+id/edit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:hint="@string/enter_your_feedback"
                android:textColorHint="#fff"
                android:background="@drawable/buttonshape"

                android:autofillHints=""
                android:inputType="textLongMessage" />





        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:padding="40dp"
            android:weightSum="4">


            <Button
                android:id="@+id/sent"
                android:layout_weight="1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sent"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_marginBottom="20dp"
                android:background="@drawable/buttonshape"/>
            <Button
                android:id="@+id/clear"
                android:layout_weight="1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textStyle="bold"
                android:textColor="#fff"
                android:background="@drawable/buttonshape"/>



        </LinearLayout>


    </LinearLayout>
</ScrollView>