<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iplback"
    android:padding="10dp"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">


            <pl.droidsonroids.gif.GifImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/iplcover"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/liveTv"
                        android:layout_width="300dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:background="@drawable/buttonshape"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:textSize="20sp"
                        android:layout_height="60dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/live_tv"
                        android:layout_marginTop="10dp"
                        />

                    <Button
                        android:id="@+id/liveRadio"
                        android:layout_width="300dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:background="@drawable/buttonshape"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:textSize="20sp"
                        android:layout_height="60dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/live_radio"
                        />
                    <Button
                        android:id="@+id/team"

                        android:layout_width="300dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:background="@drawable/buttonshape"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:textSize="20sp"
                        android:layout_height="60dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/team_and_player"
                        />

                    <Button

                        android:id="@+id/fixture"
                        android:layout_width="300dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:background="@drawable/buttonshape"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:textSize="20sp"
                        android:layout_height="60dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/fixtures"

                        />

                    <Button
                        android:id="@+id/pointTable"
                        android:layout_width="300dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:background="@drawable/buttonshape"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:textSize="20sp"
                        android:layout_height="60dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/point_table"

                        />


                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-1549251657688500/2325956803"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>